# Text-User-Interface

./: .gitignore  BUILD_AND_TEST_GUIDE.md  CMakeLists.txt  QUICK_START.md  README.md  build.bat  build_and_test.bat  build_and_test.sh  create_demo_log.bat  create_demo_log.sh  ИСПОЛЬЗОВАНИЕ.md
.claude/: settings.local.json
src/: filter_engine.cpp  filter_engine.hpp  log_reader.cpp  log_reader.hpp  main.cpp  syntax_highlighter.cpp  syntax_highlighter.hpp  tui_display.cpp  tui_display.hpp
tests/: test_filter_engine.cpp  test_log_reader.cpp  test_syntax_highlighter.cpp
